fix: scrolling overflow in custom dropdown

--- a/frontend/app/ordering-kiosk/src/components/Location/CustomDropdown.module.css
+++ b/frontend/app/ordering-kiosk/src/components/Location/CustomDropdown.module.css
@@ -33,6 +33,8 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   display: none;
   z-index: 99999;
+  max-height: 500px;
+  overflow-y: scroll;
 }
 
 .options li {
